# claude

./: .gitignore  CLAUDE.md  bun.nix  flake.nix  install-mcps.ts  justfile  package-lock.json  package.json  packages.json  show-claude-changelog.sh  update.sh  validate.ts
mcps/google-drive/: bun.nix  default.nix  package.json
mcps/google-drive/src/: auth.ts  docs.ts  docx.ts  drive.ts  index.ts  logger.ts  mcp.ts
mcps/google-drive/src/tools/: appendText.ts  convertToDoc.ts  copyFile.ts  createDocument.ts  createFolder.ts  createFromTemplate.ts  deleteFile.ts  deleteRange.ts  getFileInfo.ts  getFolderInfo.ts  index.ts  insertText.ts  listDocTabs.ts  listFiles.ts  listFolderContents.ts  moveFile.ts  readDoc.ts  readFile.ts  renameFile.ts  replaceText.ts  searchFiles.ts  shareFile.ts
uv-mcp/: pyproject.toml  versions.nix
